assets/css/styles.css
*,*::before,*::after {
    box-sizing:border-box;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
}

body {
    padding: 0;
    margin:0;
    display:flex;
    justify-content:center;
    align-items:center;
    width:100vw;
    height:100vh;
    background-color: #333;
}

.container {
    width:800px;
    max-width:80%;
    background-color:white;
    padding:10px;
    border-radius:5px;
    box-shadow: 0 0 10px 2px;
}

.btn-grid {
    display:grid;
    grid-template-columns: repeat(2, auto);
    gap:10px;
    margin-top:20px;
}

/* this one was my content -- fixes the title to be in the center, 
and helps readability by giving it some space from the buttons */
div#text {
    text-align: center;
    margin-bottom: 10px;
}

/* also my addition to the tutorial,
 lets the buttons take up the whole space rather than allowing large end-gaps on big screens */
div#option-buttons {
    justify-content: space-between;
    display: flex;
    flex-wrap: wrap;
}

.btn {
    background-color:hsl(200, 100%, 50%);
    border: 1px solid hsl(200, 100%, 30%);
    border-radius:5px;
    padding: 5px 10px;
    color:white;
    outline:none;
}

/* shows which option is currently being moused over */
.btn:hover {
    border-color:black;
}

